[b]Version 0.6.9[/b]:

(2009-10-20)
 * Bugfix: pad the hash for opensubtitles with zeroes. This bug caused that
   sometimes smplayer couldn't find any subtitles for a given file.

(2009-10-03)
 * Applied patch smplayer-3270-mandriva-mplayer-version.patch by Anssi Hannula 
   (http://sourceforge.net/users/anssih/). Makes SMPlayer detect the mplayer 
   version strings in Mandriva.

(2009-09-14)
 * New action "show_filename" (assigned to Shift+I). It displays the filename
   in the OSD.

(2009-09-13)
 * Don't pass to mplayer any audio filter (-af ...) when using -afm hwac3.

(2009-09-09)
 * (Streams) Added support to 'StreamTitle' without 'StreamUrl'

(2009-09-04)
 * Applied patch mousewheel_seekalt_checkbox_r3257.patch by Steven Eastland
   (grassmonk at users.sourceforge.net). It adds the possibility to reverse
   the direction of seeking with the mouse wheel.

(2009-08-31)
 * Added the checkbox "Disable video filters when using vdpau" in Preferences ->
   General -> Video.

(2009-08-30)
 * (Linux) New option for smplayer.ini: disable_video_filters_with_vdpau. If 
    set to true /the default) all video filters will be disabled when using 
    the vdpau vo.

(2009-08-16)
 * All video filters in the Video menu will be shown disabled if using vdpau.

(2009-08-12)
 * Bugfix: some of the items in the the recents menu may be lost.

(2009-07-31)
 * The default cache for local files is 0.
 * New option for smplayer.ini: osd_delay. It specifies the delay in 
   milliseconds to show the OSD (default 2200).

(2009-07-30)
 * If using vdpau, don't pass any video filter to mplayer (instead of passing 
   them and then clear them with -vf-clr)


[b]Version 0.6.8[/b]:

(2009-07-14)
 * Check for new channels first in ~/.mplayer/channels.conf.ter. Use 
   channels.conf if channels.conf.ter is not found.
 * Removed the "Jump..." item from the tv and radio menus. The actions
   are still available.
 * (Playlist) Fix: don't try to a load pls file if the file doesn't exist.