@@ -457,7 +457,7 @@ void Core::loadSub(const QString & sub ) {
 		just_loaded_external_subs = true;
 
 		QFileInfo fi(sub);
-		if (fi.suffix().toLower() != "idx") {
+		if ((pref->fast_load_sub) && (fi.suffix().toLower() != "idx")) {
 			QString sub_file = sub;
 			#ifdef Q_OS_WIN
 			if (pref->use_short_pathnames) {
